@@ -1,3 +1,12 @@
+2016-10-24  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version): Rolled version and date
+
+	* R/anytime.R (testFormat): New layer around testFormat_impl testing for RStudio
+	* src/anytime.cpp (testFormat_impl): Renamed from testFormat
+	* R/utils.R (isRStudio): New helper function
+	* R/init.R (.onLoad): At startup, check if we are inside RStudio
+
 2016-10-23  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/anytime.cpp (sformats[]): New format for RFC 822 style date
